<resources>
    <string name="app_name">Track It!</string>

    <!--Main Activity-->
    <string name="userName">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">Olvidé mi Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="loginWith">Iniciar Con:</string>
    <string name="register">Registrarse</string>

    <!--Crear Cuenta-->
    <string name="createAccount">Crear Cuenta</string>
    <string name="fullName">Nombre completo</string>
    <string name="email">Correo electrónico</string>
    <string name="confirmPasword">Confirmar contraseña</string>
    <string name="continuee">Continuar</string>

    <!--Verificar Cuenta-->
    <string name="verifyAccount">Verificación de cuenta</string>
    <string name="userNamePlaceHolder">#Username#</string>
    <string name="checkEmailPlaceHolder">Se ha enviado un correo a correo@mail.com con un enlace para validar su cuenta.</string>
    <string name="verifyCode">Código de verificación</string>
    <string name="noCodeReceived">No me ha llegado el código</string>
    <string name="resendCode">Volver a enviar</string>
    <string name="privacyDisclaimer">Al continuar acepta los Términos y Condiciones del servicio de Track-it!</string>
    <string name="returnLogin">Iniciar sesión</string>
    <string name="retryLogin">Presione el botón de Iniciar Sesión si ya ha verificado su cuenta.</string>

    <!--Pagina Principal-->
    <string name="noPackageRegisted">No hay envíos registrados</string>
    <string name="addParcel">Añadir número de rastreo</string>

    <!--Añadir Numero Rastreo-->
    <string name="addTrackingNumber">Añadir número de rastreo</string>
    <string name="trackingNumber">Número de rastreo</string>
    <string name="typeTrackingNumber">Introducir número de rastreo</string>
    <string name="dontKnowTrackingNumber">No me sé el código de rastreo</string>
    <string name="scanQrCode">Escanear QR de rastreo</string>
    <string name="trackByQr">Rastrear por QR</string>
    <string name="trackPackage">Rastrear envío</string>

    <!--Escanear QR-->
    <string name="scanQRCode">Escanear QR de rastreo</string>
    <string name="qrStatus">QR Leído correctamente: #1264752</string>
    <string name="redoQRScan">Volver a escanear</string>
    <string name="confirmTracking">Confirmar rastreo</string>

    <!--Estatus de entrega-->
    <string name="deliveryStatus">Estado de entrega</string>
    <string name="tv_description">018894114734 - Código de rastreo</string>
    <string name="tv_tray">Trayectoria</string>
    <string name="tv_destiny">Destinos</string>


    <!--Mi cuenta-->
    <string name="myAccount">Mi cuenta</string>
    <string name="features">Características</string>
    <string name="records">Historial</string>
    <string name="trackMyPackage">Rastrear mi envío</string>
    <string name="carrier">Transportista</string>
    <string name="settings">Ajustes</string>
    <string name="support">Soporte</string>
    <string name="about">Acerca de nosotros</string>
    <string name="faq">Preguntas frecuentes</string>

    <!--Menu con rastreos-->
    <string name="trackingAdd">Añadir otro código de rastreo</string>
    <string name="trackingObject">Texto de ejemplo</string>

    <!--Acerca de-->
    <string name="aboutUsTitle">ACERCA DE</string>
    <string name="aboutUsText">
        Track It! Ofrece el mejor servicio de seguimiento de paquetes TODO EN UNO. La aplicación cuenta
        con muchos usuarios alrededor del mundo que aprovechan al máximo las capacidades de Track It!
        para rastrear sus paquetes. Identificamos los números de rastreo de diferentes países y servicios
        postales,ya no es necesario gastar tiempo para ir de un sitio web a otro, solo con introducir el código
        de rastreo y obtendrás toda la información sobre el tránsito de su paquete.

    </string>

    <!-- transportista-->
    <string name="carrierNational">Correo nacional</string>
    <string name="carrierInternational">Correo internacional</string>

    <!-- historial-->
    <string name="history">HISTORIAL</string>

    <!-- preguntas frecuentes-->
    <string name="frqAsked">PREGUNTAS FRECUENTES</string>

    <!-- Configuración de cuenta-->
    <string name="editAccount">Editar Perfil</string>
    <string name="deleteAccount">Eliminar Cuenta</string>
    <string name="confirmChanges">Actualizar Cuenta</string>

</resources>