<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddTrackingNumber">

    <LinearLayout
        android:id="@+id/llAddTrackingNumber_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibAddTrackingNumber_back"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="@color/secondAppColor"
            android:src="@drawable/regresar"/>

        <TextView
            android:id="@+id/tvAddTrackingNumber_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/lato_bold"
            android:text="@string/addTrackingNumber"
            android:textColor="@color/mainTextColor"
            android:textSize="24sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvAddTrackingNumber_addNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_gravity="start"
        android:fontFamily="@font/lato_regular"
        android:text="@string/trackingNumber"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/etAddTrackingNumber_trackingNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center"
        android:ems="24"
        android:inputType="text"
        android:hint="@string/typeTrackingNumber"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColorHint="@color/secondTextColor"
        android:textColor="@color/secondTextColor" />

    <TextView
        android:id="@+id/tvAddTrackingNumber_dontKnowNumber"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/dontKnowTrackingNumber"
        android:textColor="@color/secondTextColor"/>

    <TextView
        android:id="@+id/tvAddTrackingNumber_scanQrCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_gravity="start"
        android:fontFamily="@font/lato_regular"
        android:text="@string/scanQrCode"
        android:textColor="@color/mainTextColor"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/ivAddTrackingNumber_scanQrCode"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/secondAppColor"
        android:src="@drawable/lectorqr"/>

    <Button
        android:id="@+id/btnAddTrackingNumber_trackByQr"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/trackByQr"
        android:textSize="12sp"
        android:textColor="@color/contrastTextColor"
        android:fontFamily="@font/lato_bold"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:id="@+id/glMainPage_navButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-6dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/btnAddTrackingNumber_trackPackage"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginRight="-5dp"
            android:text="@string/trackPackage"
            android:fontFamily="@font/lato_bold"/>
    </RelativeLayout>



</LinearLayout>