<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/tvCreateAccount_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:fontFamily="@font/lato_bold"
        android:text="@string/createAccount"
        android:textColor="@color/mainTextColor"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/ivCreateAccount_addImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:src="@drawable/cuenta"/>

    <EditText
        android:id="@+id/etCreateAccount_fullName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="4dp"
        android:layout_gravity="center"
        android:ems="24"
        android:inputType="textPersonName"
        android:maxLength="72"
        android:hint="@string/fullName"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColorHint="@color/secondTextColor"
        android:textColor="@color/secondTextColor" />

    <EditText
        android:id="@+id/etCreateAccount_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:layout_gravity="center"
        android:ems="24"
        android:inputType="text"
        android:maxLength="16"
        android:hint="@string/userName"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColorHint="@color/secondTextColor"
        android:textColor="@color/secondTextColor" />

    <EditText
        android:id="@+id/etCreateAccount_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:layout_gravity="center"
        android:ems="24"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColorHint="@color/secondTextColor"
        android:textColor="@color/secondTextColor" />

    <EditText
        android:id="@+id/etCreateAccount_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:layout_gravity="center"
        android:ems="24"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColorHint="@color/secondTextColor"
        android:textColor="@color/secondTextColor" />

    <EditText
        android:id="@+id/etCreateAccount_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:layout_gravity="center"
        android:ems="24"
        android:inputType="textPassword"
        android:hint="@string/confirmPasword"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColorHint="@color/secondTextColor"
        android:textColor="@color/secondTextColor" />

    <Button
        android:id="@+id/btnCreateAccount_continue"
        android:layout_width="196dp"
        android:layout_height="55dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/continuee"
        android:textColor="@color/contrastTextColor"
        android:fontFamily="@font/lato_bold"
        android:layout_gravity="center"/>
    <!--
        <TextView
            android:id="@+id/tvCreateAccount_loginWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:text="@string/loginWith"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/secondTextColor"/>

        <LinearLayout
            android:id="@+id/llCreateAccount_loginWith"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivCreateAccount_facebookLogin"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="32dp"
                android:layout_gravity="center"
                android:src="@drawable/facebooklogin"/>

            <ImageView
                android:id="@+id/ivCreateAccount_instagramLogin"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="32dp"
                android:layout_gravity="center"
                android:src="@drawable/instagramlogin"/>

            <ImageView
                android:id="@+id/ivCreateAccount_googleLogin"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="32dp"
                android:layout_gravity="center"
                android:src="@drawable/googlelogin"/>

        </LinearLayout>
    -->
</LinearLayout>