<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".shipper">

    <TextView
        android:id="@+id/tvShipper_titleScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/carrier"
        android:textColor="@color/mainTextColor"
        android:textSize="30dp"/>

    <ListView
        android:id="@+id/lvCarrier"
        android:layout_width="match_parent"
        android:layout_height="473dp"
        android:layout_marginTop="20dp"
        android:divider="@null"
        android:dividerHeight="7dp"
        />

    <RelativeLayout
        android:id="@+id/glShipper_navButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-6dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/btnShipper_National"
            android:layout_width="215dp"
            android:layout_height="96dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginRight="-10dp"
            android:text="@string/carrierNational"
            android:backgroundTint="@color/mainAppColor"
             />

        <Button
            android:id="@+id/btnShipper_International"
            android:layout_width="215dp"
            android:layout_height="96dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginEnd="-10dp"
            android:layout_marginBottom="-10dp"
            android:text="@string/carrierInternational"
            android:layout_toRightOf="@id/btnShipper_National"
            android:backgroundTint="@color/secondAppColor"
             />

    </RelativeLayout>

</LinearLayout>