<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerifyAccount">

    <TextView
        android:id="@+id/tvVerifyAccount_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:fontFamily="@font/lato_bold"
        android:text="@string/verifyAccount"
        android:textColor="@color/mainTextColor"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/ivVerifyAccount_accountImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:src="@drawable/cuenta"/>

    <TextView
        android:id="@+id/tvVerifyAccount_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/lato_italic"
        android:textFontWeight="700"
        android:text="@string/userNamePlaceHolder"
        android:textColor="@color/mainTextColor"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/tvVerifyAccount_verifyEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:fontFamily="@font/lato_italic"
        android:text="@string/checkEmailPlaceHolder"
        android:textColor="@color/secondTextColor"
        android:textSize="18sp"/>

    <!--
    <EditText
        android:id="@+id/etVerifyAccount_verifyCode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:layout_gravity="center"
        android:ems="24"
        android:inputType="text"
        android:hint="@string/verifyCode"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColorHint="@color/secondTextColor"
        android:textColor="@color/secondTextColor" />
        -->

    <LinearLayout
        android:id="@+id/glVerifyAccount_reSendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">
        <!--
        <Button
            android:id="@+id/btnVerifyAccount_reSendCode"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="fill_vertical|top"
            android:fontFamily="@font/lato_bold"
            android:text="@string/resendCode"
            android:textColor="@color/mainTextColor"
            android:backgroundTint="@color/secondAppColor"/>

        <TextView
            android:id="@+id/tvVerifyAccount_noCodeReceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/noCodeReceived"
            android:textColor="@color/secondTextColor"
            android:textSize="16sp" />
        -->
    </LinearLayout>



    <Button
        android:id="@+id/btnVerifyAccount_createAccount"
        android:layout_width="196dp"
        android:layout_height="55dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/returnLogin"
        android:textColor="@color/contrastTextColor"
        android:fontFamily="@font/lato_bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvVerifyAccount_RetryToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:fontFamily="@font/lato_italic"
        android:text="@string/retryLogin"
        android:textColor="@color/secondTextColor"
        android:textSize="14sp"/>

    <GridLayout
        android:id="@+id/glVerifyAccount_disclaimerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvVerifyAccount_privacyDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center|bottom"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/privacyDisclaimer"
            android:textColor="@color/secondTextColor"
            android:textSize="12sp" />
    </GridLayout>



</LinearLayout>